# ObjectSystem

./: .gitignore  CMakeLists.txt  default_lists.cmake
Core/: CMakeLists.txt  Core.h  Main.cpp  Main.h  MainMacro.h  Object.cpp  Object.h  Rtti.cpp  Rtti.h  RttiMacro.h  RttiManager.cpp  RttiManager.h  Serializer.cpp  Serializer.h  StringHash.cpp  StringHash.h  Type.h
Engine/: AssetManager.h  CMakeLists.txt  reflection_register.cpp  reflection_register.h
Engine/component/: Animatable.cpp  Animatable.h  CameraComponent.cpp  CameraComponent.h  Component.cpp  Component.h  LightComponent.cpp  LightComponent.h  ParticleComponent.cpp  ParticleComponent.h  ParticleEvolver.cpp  ParticleEvolver.h  ParticleProperty.h  RenderComponent.cpp  RenderComponent.h  ScriptComponent.cpp  ScriptComponent.h  TransformComponent.cpp  TransformComponent.h
Engine/object/: GameObject.cpp  GameObject.h  Scene.cpp  Scene.h
Engine/precompile/: precompile.cmake  precompile.json.in
Math/: 3DMath.h  AABB.h  CMakeLists.txt  Mat3.cpp  Mat3.h  Mat4.cpp  Mat4.h  Math.cpp  Math.h  MathUtil.cpp  MathUtil.h  Plane.h  Quaternion.h  Ray.cpp  Ray.h  Rect.h  Sphere.h  Vec1.h  Vec2.h  Vec3.h  Vec4.h
Meta/: CMakeLists.txt  json.h  reflection.cpp  reflection.h
System/: CMakeLists.txt  Delegate.h  Macros.h  MathInstance.cpp  MathInstance.h  SafeQueue.h  System.h  Utility.hpp
System/Platform/: PlatformConfig.h
Test/TestModule/: CMakeLists.txt  TestObject.cpp  main.cpp
Third/LuaBitOp-1.0.2/: CMakeLists.txt
Third/LuaVMLib/: lstring.c  lstring.h
Third/json11/: CMakeLists.txt  json11.cpp  json11.hpp
Third/lua-cjson/: CMakeLists.txt  lua_cjson.c  strbuf.c  strbuf.h
Third/luafilesystem/: CMakeLists.txt
Third/luafilesystem/src/: lfs.c
Third/luasocket/: CMakeLists.txt
Third/rapidjson/doc/: dom.md  sax.md  tutorial.md
Third/rapidjson/example/capitalize/: capitalize.cpp
Third/rapidjson/example/messagereader/: messagereader.cpp
Third/rapidjson/example/serialize/: serialize.cpp
Third/rapidjson/example/simplereader/: simplereader.cpp
Third/rapidjson/example/simplewriter/: simplewriter.cpp
Third/rapidjson/example/tutorial/: tutorial.cpp
Third/rapidjson/include/rapidjson/: document.h  prettywriter.h  rapidjson.h  reader.h  stringbuffer.h  writer.h
Third/rapidjson/test/unittest/: readertest.cpp  valuetest.cpp  writertest.cpp
Tools/meta_parser/: CMakeLists.txt
Tools/meta_parser/parser/generator/: generator.cpp  generator.h  reflection_generator.cpp  serializer_generator.cpp  serializer_generator.h  special_class_generator.cpp  special_class_generator.h
Tools/meta_parser/parser/language_types/: class.cpp  field.cpp
Tools/meta_parser/parser/parser/: parser.cpp
buiild/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ObjectSystem.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
buiild/core_dir/: Core.vcxproj  Core.vcxproj.filters  cmake_install.cmake
buiild/json11_lib/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CTestTestfile.cmake  cmake_install.cmake  json11.pc  json11.sln  json11.vcxproj  json11.vcxproj.filters
buiild/lua_bit_dir/: cmake_install.cmake  luabit.vcxproj  luabit.vcxproj.filters
buiild/lua_cjson_dir/: cmake_install.cmake  luacjson.vcxproj  luacjson.vcxproj.filters
buiild/lua_dir/: cmake_install.cmake  lua.vcxproj  lua.vcxproj.filters
buiild/luafilesystem_dir/: cmake_install.cmake  luafilesystem.vcxproj  luafilesystem.vcxproj.filters
buiild/luasocket_dir/: cmake_install.cmake  socket.vcxproj  socket.vcxproj.filters
buiild/math_dir/: Math.vcxproj  Math.vcxproj.filters  cmake_install.cmake
buiild/meta_dir/: Meta.vcxproj  Meta.vcxproj.filters  cmake_install.cmake
buiild/meta_parser_dir/: Parser.vcxproj  Parser.vcxproj.filters  cmake_install.cmake
buiild/system_dir/: System.vcxproj  System.vcxproj.filters  cmake_install.cmake
buiild/test_testmodule_dir/: TestModule.vcxproj  TestModule.vcxproj.filters  cmake_install.cmake
template/: allReflectionFile.mustache  allSerializer.h.mustache  allSerializer.ipp.mustache  commonReflectionFile.mustache  commonSerializerGenFile.mustache  commonSpecialClassGenFile.mustache
